--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -34,7 +34,22 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 
 ## ⚛️ React {#react}
 
-<Todo />
+- https://x.com/zenorocha/status/1732429176248959454?s=20
+- [First alphas of Storybook 8](https://github.com/storybookjs/storybook/releases)
+- [Million.js 3.0](https://million.dev/blog/million-3)
+- [Parallel routes and default.js in Next.js](https://x.com/asidorenko_/status/1732846254420308362) good and short video introduction (but X only)
+- [Next.js - Updated Server Actions docs](https://x.com/delba_oliveira/status/1733169596491018269?s=20)(https://nextjs.org/docs/app/building-your-application/data-fetching/server-actions-and-mutations)
+- https://x.com/aryan__deora/status/1733164876170764409?s=20
+- [v0 can now render charts](https://x.com/rauchg/status/1733002334043865425?s=20)
+- https://x.com/dai_shi/status/1733470466416037960?s=20
+- https://x.com/HookForm/status/1733594239056158836?s=20
+- [Simple Form 1.0](https://x.com/BHolmesDev/status/1734057284966195655?s=20) New form library just dropped.
+- [Next.js React Foundations updated with App Router and Server Components](We updated the Next.js Foundations course to include the App Router and Server Components.)
+- [Dan Abramov: A Chain Reaction](https://overreacted.io/a-chain-reaction/)
+
+# Probably not
+- [WebStorm 2023.3](https://blog.jetbrains.com/webstorm/2023/12/webstorm-2023-3/#improved_angular_support) with minor improvements for React development
+
 
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
 
@@ -60,19 +75,41 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- https://reactnative.dev/blog/2023/12/06/0.73-debugging-improvements-stable-symlinks
+- [Reactotron 3.0](https://shift.infinite.red/announcing-reactotron-3-0-934b5a221bda) brings automatic tracking of all log messages, better Android device debugging, faster app launch time
+- [interpolate in React Native Reanimated](https://x.com/kacperkapusciak/status/1732794213371097491?s=20) Informative X thread
+- [Expo SDK 50 available as canary release](https://docs.expo.dev/versions/latest/#using-pre-release-versions) Expo introduces canary releases
+- [Expo - Keep your cache close — It’s Faster!](https://expo.dev/changelog/2023/12-07-cocoapods-cache#how-to-speed-up-cocoapods) Expo cuts pod installation time by caching popular pods directly on their build VMs
+- [3D transforms in RN Skia soon](https://x.com/wcandillon/status/1733972374930837776?s=20)
+- [POC of multi-window apps support in React Native](https://x.com/o_kwasniewski/status/1734198386612388263?s=20)
+- [RFC: Well-defined event loop processing model](https://github.com/react-native-community/discussions-and-proposals/pull/744)
+- React Server Components in React Native
+- - https://x.com/SzymonRybczak/status/1733191828306800654?s=20
+
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- [Big update to GitHub Copilot](https://www.youtube.com/watch?v=SZVCJRUADc4)
+- [Electron 28](https://www.electronjs.org/blog/electron-28-0)
+- [New V8 compiler "Maglev"](https://x.com/v8js/status/1733160315326792162?s=20)
+- [Advice for developers from Shopify CEO Tobias Lütke](https://www.youtube.com/watch?si=CJMQtcv28JerS49p&v=prHmUW4JIms&feature=youtu.be)
+- https://x.com/webkit/status/1734291991414841365?s=20
+
+# Probably not
+- [VS Code November release](https://code.visualstudio.com/updates/v1_85)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+- https://x.com/CreeCoder/status/1732645774779977811?s=20
+- https://x.com/thymikee/status/1733145938665918478?s=20
+- https://x.com/kepano/status/1733246246478131278?s=20
+- https://x.com/BHolmesDev/status/1733572149527429222?s=20
+- https://x.com/t3dotgg/status/1733632034898059387?s=20
+- https://x.com/shuttle_dev/status/1734154967085146534?s=20
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
