--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
@@ -35,8 +35,10 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 ## ⚛️ React {#react}
 
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
-
+- [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov nous propose une belle leçon de storytelling à travers l'implémentation d'une fonction récursive qui traduit le JSX en éléments HTML.
 - [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo)
+- [Best Practices using React Server Components with a Headless CMS](https://www.cosmicjs.com/blog/best-practices-using-react-server-components-with-a-headless-cms)
+- [Introducing StyleX](https://stylexjs.com/blog/introducing-stylex)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -62,6 +64,7 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 - RN 0.73
 - [Creating a macOS MenuBar app with React Native](https://www.oskarkwasniewski.dev/blog/create-react-native-macos-menubar-app)
+- Epic won the Google/Android case - https://twitter.com/t3dotgg/status/1734450296456093943
 
 ---
 
@@ -77,13 +80,16 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [CSS Wrapped: 2023!](https://developer.chrome.com/blog/css-wrapped-2023)
+- [Correctly Configure (Pre) Connections](https://csswizardry.com/2023/12/correctly-configure-preconnections/)
+- [WebKit Features in Safari 17.2 - exclusive accordions, CSS nesting, maths, animations](https://webkit.org/blog/14787/webkit-features-in-safari-17-2/)
+- [Release Notes for Safari Technology Preview 184](https://webkit.org/blog/14780/release-notes-for-safari-technology-preview-184/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+https://twitter.com/sebastienlorber/status/1733126141915906550
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
