--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
@@ -8,6 +8,8 @@ unlisted: true
 
 Salut à tous !
 
+N'oubliez pas de remplir les sondages [State of JavaScript](https://stateofjs.com/en-US) et [State of React-Native](https://stateofreactnative.com/). Et si vous pouviez me faire un peu de pub à la fin c'est cool! [Theo T3 vous montre comment faire](https://youtube.com/clip/UgkxDdNASo6xNS710ODcjMx0WW4HtTxIYbrA?si=G0rAnDKOQwHqh_ED) 😄
+
 <Todo />
 
 <!-- truncate -->
@@ -34,11 +36,33 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 
 ## ⚛️ React {#react}
 
+---
+
+GitHub Unwrapped 2023
+
+https://githubunwrapped.com/slorber
+
+https://github.com/remotion-dev/github-unwrapped-2023
+
+https://twitter.com/sebastienlorber/status/1734622460547342693
+
+---
+
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
 - [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov nous propose une belle leçon de storytelling à travers l'implémentation d'une fonction récursive qui traduit le JSX en éléments HTML.
 - [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo)
 - [Best Practices using React Server Components with a Headless CMS](https://www.cosmicjs.com/blog/best-practices-using-react-server-components-with-a-headless-cms)
 - [Introducing StyleX](https://stylexjs.com/blog/introducing-stylex)
+- [Polymorphism in React: 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
+- [Lexical state updates](https://dio.la/article/lexical-state-updates)
+- [Next-Admin 3.0 - App router support](https://github.com/premieroctet/next-admin/releases/tag/%40premieroctet%2Fnext-admin%403.0.0)
+- [React DevTools 5.0 - React-Forget badge](https://github.com/facebook/react/pull/27759): j'ai testé et on peut voir qu'en pratique Instagram utilise déjà React-Forget ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
+- [Epic Stack - Client Hints - Eliminate a flash of incorrect content by using client hints](https://github.com/epicweb-dev/client-hints)
+- [Introducing Waku - The minimal React Framework that enhances React Server Component usage](https://waku.gg/blog/introducing-waku) - Waku 0.18 - https://waku.gg/ - https://twitter.com/dai_shi/status/1734585396703740017
+- [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params)
+- [Expose Remix Routes as API Endpoints](https://sergiodxa.com/tutorials/expose-remix-routes-as-api-endpoints)
+- [Million 3.0](https://million.dev/blog/million-3)
+- [Fuse.js: The opinionated framework for creating typesafe data layers](https://stellate.co/blog/announcing-fuse-js)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -65,6 +89,9 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - RN 0.73
 - [Creating a macOS MenuBar app with React Native](https://www.oskarkwasniewski.dev/blog/create-react-native-macos-menubar-app)
 - Epic won the Google/Android case - https://twitter.com/t3dotgg/status/1734450296456093943
+- [State of React-Native - Reminder to fill the survey!](https://survey.stateofreactnative.com/)
+- [react-native-permissions 4.0](https://github.com/zoontek/react-native-permissions/releases/tag/4.0.0)
+- [Rocket Ship](https://podcast.galaxies.dev/): un podcast React-Native à découvrir
 
 ---
 
@@ -80,16 +107,23 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 ## 🔀 Autre {#other}
 
+- [Baseline 2023](https://web.dev/blog/baseline2023)
 - [CSS Wrapped: 2023!](https://developer.chrome.com/blog/css-wrapped-2023)
 - [Correctly Configure (Pre) Connections](https://csswizardry.com/2023/12/correctly-configure-preconnections/)
 - [WebKit Features in Safari 17.2 - exclusive accordions, CSS nesting, maths, animations](https://webkit.org/blog/14787/webkit-features-in-safari-17-2/)
 - [Release Notes for Safari Technology Preview 184](https://webkit.org/blog/14780/release-notes-for-safari-technology-preview-184/)
+- [Does Interaction to Next Paint actually correlate to user behavior?](https://www.speedcurve.com/blog/INP-user-experience-correlation/)
+- [TC39 FAQ](https://github.com/tc39/faq/)
+- [Seroval 1.0 - Stringify JS values](https://github.com/lxsmnsyc/seroval)
+- [The TypeScript 5.3 Feature They Didn't Tell You About - as const satisfies](https://www.totaltypescript.com/the-typescript-5-3-feature-they-didn-t-tell-you-about)
 
 ---
 
 ## 🤭 Fun {#fun}
 
 https://twitter.com/sebastienlorber/status/1733126141915906550
+
+https://twitter.com/sebastienlorber/status/1734633934439256133
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
