--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/166/index.mdx
@@ -63,6 +63,13 @@ https://twitter.com/sebastienlorber/status/1734622460547342693
 - [Expose Remix Routes as API Endpoints](https://sergiodxa.com/tutorials/expose-remix-routes-as-api-endpoints)
 - [Million 3.0](https://million.dev/blog/million-3)
 - [Fuse.js: The opinionated framework for creating typesafe data layers](https://stellate.co/blog/announcing-fuse-js)
+- [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): templates are remounted on navigation and reset their state.
+- [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui)
+- [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
+- [Next.js foundations course - Now includes App Router and Server Components](https://nextjs.org/learn/react-foundations)
+- React hydration error diff demo: https://twitter.com/samijaber_/status/1734332721634099282
+- [Next.js moving away from extending fetch, adding new APIs like `noStore()`](https://twitter.com/leeerob/status/1733154383410684148)
+- [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): difficult to use both models at once. Tanner migrated the upcoming TanStack Router to a reactive model ([ref](https://twitter.com/tannerlinsley/status/1732906060795846847)).
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -92,6 +99,11 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - [State of React-Native - Reminder to fill the survey!](https://survey.stateofreactnative.com/)
 - [react-native-permissions 4.0](https://github.com/zoontek/react-native-permissions/releases/tag/4.0.0)
 - [Rocket Ship](https://podcast.galaxies.dev/): un podcast React-Native à découvrir
+- [Expo Router v3 beta is now available](https://blog.expo.dev/expo-router-v3-beta-is-now-available-eab52baf1e3e)
+- [Expo SDK 50 beta is now available](https://blog.expo.dev/expo-sdk-50-beta-is-now-available-8e6c74e4e13d)
+- [Expo now shipping canary releases](https://twitter.com/tsapeta/status/1732892591556034751)
+- [Evan Bacon about React-Native Server Components being blocked due to lack of Metro bunfle splitting](https://twitter.com/Baconbrix/status/1734250043488563387)
+- [Integrate Firebase Analytics into Expo Router](https://tinybytelabs.com/blog/integrate-firebase-analytics-to-expo-router): unlike React-Navigation, Expo-Router is url-first and you have to listen to pathname changes.
 
 ---
 
@@ -107,7 +119,7 @@ Offers industry-standard solutions for critical project aspects like **authentic
 
 ## 🔀 Autre {#other}
 
-- [Baseline 2023](https://web.dev/blog/baseline2023)
+- [Baseline 2023 - All new cross-browser supported APIs - Displayed on on caniuse](https://web.dev/blog/baseline2023)
 - [CSS Wrapped: 2023!](https://developer.chrome.com/blog/css-wrapped-2023)
 - [Correctly Configure (Pre) Connections](https://csswizardry.com/2023/12/correctly-configure-preconnections/)
 - [WebKit Features in Safari 17.2 - exclusive accordions, CSS nesting, maths, animations](https://webkit.org/blog/14787/webkit-features-in-safari-17-2/)
@@ -124,6 +136,8 @@ Offers industry-standard solutions for critical project aspects like **authentic
 https://twitter.com/sebastienlorber/status/1733126141915906550
 
 https://twitter.com/sebastienlorber/status/1734633934439256133
+
+https://twitter.com/almormd/status/1732681415677083812
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
