--- a/website/newsletter/166/index.mdx
+++ b/website/newsletter/166/index.mdx
@@ -47,9 +47,34 @@ A new kind of dev tool for React just opened its beta. See your JSX and styles i
 - [Next.js React Foundations updated with App Router and Server Components](We updated the Next.js Foundations course to include the App Router and Server Components.)
 - [Dan Abramov: A Chain Reaction](https://overreacted.io/a-chain-reaction/)
 
-# Probably not
-- [WebStorm 2023.3](https://blog.jetbrains.com/webstorm/2023/12/webstorm-2023-3/#improved_angular_support) with minor improvements for React development
+### Seb
 
+- 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
+- [A Chain Reaction](https://overreacted.io/a-chain-reaction/): Dan Abramov nous propose une belle leçon de storytelling à travers l'implémentation d'une fonction récursive qui traduit le JSX en éléments HTML.
+- [How to set up self-healing URLs in Next.js for better SEO](https://mikebifulco.com/posts/self-healing-urls-nextjs-seo)
+- [Best Practices using React Server Components with a Headless CMS](https://www.cosmicjs.com/blog/best-practices-using-react-server-components-with-a-headless-cms)
+- [Introducing StyleX](https://stylexjs.com/blog/introducing-stylex)
+- [Polymorphism in React: 2 patterns you must know](https://www.bekk.christmas/post/2023/01/polymorphism-in-react)
+- [Lexical state updates](https://dio.la/article/lexical-state-updates)
+- [Next-Admin 3.0 - App router support](https://github.com/premieroctet/next-admin/releases/tag/%40premieroctet%2Fnext-admin%403.0.0)
+- [React DevTools 5.0 - New React-Forget badge](https://github.com/facebook/react/pull/27759): I gave it a try and we can see React-Forget is already used in production on Instagram ([ref](https://twitter.com/sebastienlorber/status/1734607171030303186)).
+- [Epic Stack - Client Hints - Eliminate a flash of incorrect content by using client hints](https://github.com/epicweb-dev/client-hints)
+- [Introducing Waku - The minimal React Framework that enhances React Server Component usage](https://waku.gg/blog/introducing-waku) - Waku 0.18 - https://waku.gg/ - https://twitter.com/dai_shi/status/1734585396703740017
+- [Remix - Submit a form without overwriting existing parameters](https://www.jacobparis.com/content/existing-params)
+- [Expose Remix Routes as API Endpoints](https://sergiodxa.com/tutorials/expose-remix-routes-as-api-endpoints)
+- [Million 3.0](https://million.dev/blog/million-3)
+- [Fuse.js: The opinionated framework for creating typesafe data layers](https://stellate.co/blog/announcing-fuse-js)
+- [Next.js 14: Layouts vs Templates](https://www.builder.io/blog/nextjs-14-layouts-templates): templates are remounted on navigation and reset their state.
+- [The anatomy of shadcn/ui](https://manupa.dev/blog/anatomy-of-shadcn-ui)
+- [AuthKit - The world's best login box powered by WorkOS and Radix](https://www.authkit.com/)
+- [Next.js foundations course - Now includes App Router and Server Components](https://nextjs.org/learn/react-foundations)
+- React hydration error diff demo: https://twitter.com/samijaber_/status/1734332721634099282
+- [Next.js moving away from extending fetch, adding new APIs like `noStore()`](https://twitter.com/leeerob/status/1733154383410684148)
+- [Tanner Linsley about React concurrent model vs reactive model](https://twitter.com/tannerlinsley/status/1732474127712481371): difficult to use both models at once. Tanner migrated the upcoming TanStack Router to a reactive model ([ref](https://twitter.com/tannerlinsley/status/1732906060795846847)).
+
+### Probably not
+
+- [WebStorm 2023.3](https://blog.jetbrains.com/webstorm/2023/12/webstorm-2023-3/#improved_angular_support) with minor improvements for React development
 
 - 💸 [Developer Nation Survey - For each completed response, Developer Nation will donate to one of the charities of respondents’ choosing! Start now!](https://developereconomics.net/?member_id=thisweekinreact&utm_medium=nl_ad2)
 
@@ -86,6 +111,19 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - React Server Components in React Native
 - - https://x.com/SzymonRybczak/status/1733191828306800654?s=20
 
+### Seb
+
+- RN 0.73
+- [Creating a macOS MenuBar app with React Native](https://www.oskarkwasniewski.dev/blog/create-react-native-macos-menubar-app)
+- Epic won the Google/Android case - https://twitter.com/t3dotgg/status/1734450296456093943 ???
+- [State of React-Native - Reminder to fill the survey!](https://survey.stateofreactnative.com/)
+- [react-native-permissions 4.0](https://github.com/zoontek/react-native-permissions/releases/tag/4.0.0)
+- [Rocket Ship](https://podcast.galaxies.dev/): un podcast React-Native à découvrir
+- [Expo Router v3 beta is now available](https://blog.expo.dev/expo-router-v3-beta-is-now-available-eab52baf1e3e)
+- [Expo SDK 50 beta is now available](https://blog.expo.dev/expo-sdk-50-beta-is-now-available-8e6c74e4e13d)
+- [Expo now shipping canary releases](https://twitter.com/tsapeta/status/1732892591556034751)
+- [Evan Bacon about React-Native Server Components being blocked due to lack of Metro bunfle splitting](https://twitter.com/Baconbrix/status/1734250043488563387)
+- [Integrate Firebase Analytics into Expo Router](https://tinybytelabs.com/blog/integrate-firebase-analytics-to-expo-router): unlike React-Navigation, Expo-Router is url-first and you have to listen to pathname changes.
 
 ---
 
@@ -97,8 +135,21 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - [Advice for developers from Shopify CEO Tobias Lütke](https://www.youtube.com/watch?si=CJMQtcv28JerS49p&v=prHmUW4JIms&feature=youtu.be)
 - https://x.com/webkit/status/1734291991414841365?s=20
 
-# Probably not
+### Probably not
+
 - [VS Code November release](https://code.visualstudio.com/updates/v1_85)
+
+### Seb
+
+- [Baseline 2023 - All new cross-browser supported APIs - Displayed on on caniuse](https://web.dev/blog/baseline2023)
+- [CSS Wrapped: 2023!](https://developer.chrome.com/blog/css-wrapped-2023)
+- [Correctly Configure (Pre) Connections](https://csswizardry.com/2023/12/correctly-configure-preconnections/)
+- [WebKit Features in Safari 17.2 - exclusive accordions, CSS nesting, maths, animations](https://webkit.org/blog/14787/webkit-features-in-safari-17-2/)
+- [Release Notes for Safari Technology Preview 184](https://webkit.org/blog/14780/release-notes-for-safari-technology-preview-184/)
+- [Does Interaction to Next Paint actually correlate to user behavior?](https://www.speedcurve.com/blog/INP-user-experience-correlation/)
+- [TC39 FAQ](https://github.com/tc39/faq/)
+- [Seroval 1.0 - Stringify JS values](https://github.com/lxsmnsyc/seroval)
+- [The TypeScript 5.3 Feature They Didn't Tell You About - as const satisfies](https://www.totaltypescript.com/the-typescript-5-3-feature-they-didn-t-tell-you-about)
 
 ---
 
@@ -110,6 +161,12 @@ Offers industry-standard solutions for critical project aspects like **authentic
 - https://x.com/BHolmesDev/status/1733572149527429222?s=20
 - https://x.com/t3dotgg/status/1733632034898059387?s=20
 - https://x.com/shuttle_dev/status/1734154967085146534?s=20
+
+### Seb
+
+- https://twitter.com/sebastienlorber/status/1733126141915906550
+- https://twitter.com/sebastienlorber/status/1734633934439256133
+- https://twitter.com/almormd/status/1732681415677083812
 
 [![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
 
